# libvirt-instance

./: .gitignore  CHANGELOG.md  DEVELOPING.md  LICENSE  Makefile  README.md  pyproject.toml
src/libvirt_instance/: cli.py  config.py  domain.py  output.py  seed_image.py  util.py
src/libvirt_instance/domain-presets/: headless-server-aarch64.xml  headless-server-x86_64.xml  linux-server.xml
tests/: libvirt_mock.py  test_cli.py  test_config.py  test_domain.py  test_output.py  test_seed_image.py  test_util.py
